# vuln-scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: vuln-scan.yml
docs/superpowers/plans/: 2026-04-03-improvements.md
src/vuln_scanner/: __init__.py  logging_config.py
src/vuln_scanner/agents/: __init__.py  github_client.py  models.py  remediation_agent.py
src/vuln_scanner/cli/: __init__.py  main.py
src/vuln_scanner/core/: __init__.py  async_enricher.py  enricher.py
src/vuln_scanner/dashboard/: __init__.py  server.py
src/vuln_scanner/dashboard/static/: style.css
src/vuln_scanner/dashboard/templates/: index.html  scan.html
src/vuln_scanner/fix_suggester/: __init__.py  ai_suggester.py  nvd_fixes.py  package_fixes.py  suggester.py
src/vuln_scanner/fix_suggester/providers/: __init__.py  base.py
src/vuln_scanner/formatters/: __init__.py  csv.py  html.py  json.py  sarif.py
src/vuln_scanner/nvd/: __init__.py  async_client.py  cache.py  client.py  models.py
src/vuln_scanner/scanners/: __init__.py  base.py  package_json.py  requirements.py  sbom.py  trivy.py
tests/fixtures/: sample_sbom_cyclonedx.json  sample_sbom_spdx.json  sample_trivy.json
tests/integration/: test_scan_enrich_flow.py
tests/unit/: test_async_enricher.py  test_enricher.py  test_package_json_scanner.py  test_remediation_agent.py  test_requirements_scanner.py  test_sarif_formatter.py  test_sbom_scanner.py  test_trivy_scanner.py
